<resources>
    <string name="app_name">bus_api_client_xml</string>
    <string name="name">NAME</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_caps">LOGIN</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="phone_number">Phone number</string>
    <string name="item_name">item-name</string>
    <string name="id">ID</string>
    <string name="id_content">line id</string>
    <string name="origin">ORIGIN</string>
    <string name="origin_content">origin place</string>
    <string name="destination">DESTINATION</string>
    <string name="destination_content">destination place</string>
    <string name="stops">STOPS</string>
    <string name="lines">LINES</string>
    <string name="stop_id_content">stop id</string>
    <string name="name_content">name</string>
    <string name="coordinates">COORDINATES</string>
    <string name="coordinates_content">(X,Y)</string>
    <string name="first_name_caps">FIRST NAME</string>
    <string name="last_name_caps">LAST NAME</string>
    <string name="assigned_line">ASSIGNED LINE</string>
    <string name="line_id">LINE ID</string>
    <string name="header">HEADER</string>
    <string name="drivers">DRIVERS</string>
    <string name="driver">Driver</string>
    <string name="title">TITLE</string>
    <string name="my_profile">My Profile</string>
    <string name="all_drivers">All Drivers</string>
    <string name="all_drivers_fragment">Fragment that contains a list of all of the drivers</string>
    <string name="driver_detail_fragment">Fragment that contains a specific driver</string>
    <string name="full_name">Full name (First + last name)</string>
    <string name="email">Email</string>
    <string name="phone_caps">PHONE</string>
    <string name="email_caps">EMAIL</string>
    <string name="my_profile_slash_driver">MY PROFILE / DRIVER</string>
    <string name="driver_caps">DRIVER</string>
    <string name="bus_driving_app">BUS DRIVING APPLICATION</string>
    <string name="login_fragment">Fragment in which the user can log in</string>
</resources>