<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.drivers.DriversListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topMidGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/stopIdTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/id"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintBottom_toTopOf="@id/stopIdContentTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/stopIdContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/stop_id_content"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/stopIdTextView"
            app:layout_constraintBottom_toTopOf="@id/nameTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/name"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/stopIdContentTextView"
            app:layout_constraintBottom_toTopOf="@id/nameContentTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/nameContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/name_content"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            app:layout_constraintBottom_toTopOf="@id/coordinatesTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/coordinatesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/coordinates"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/nameContentTextView"
            app:layout_constraintBottom_toTopOf="@id/coordinatesContentTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/coordinatesContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/coordinates_content"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/coordinatesTextView"
            app:layout_constraintBottom_toTopOf="@id/topMidGuideline"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/linesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:elegantTextHeight="true"
            android:text="@string/lines"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/midGuideline"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerLines"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:translationZ="0dp"
            app:layout_constraintTop_toBottomOf="@id/midGuideline"
            app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            tools:listitem="@layout/line_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>