<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".framework.drivers.DriversListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topMidGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/id"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintBottom_toTopOf="@id/idContentContentTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/idContentContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/id_content"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/idTextView"
            app:layout_constraintBottom_toTopOf="@id/originTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/originTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/origin"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/idContentContentTextView"
            app:layout_constraintBottom_toTopOf="@id/originContentTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/originContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/origin_content"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/originTextView"
            app:layout_constraintBottom_toTopOf="@id/destinationTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/destinationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/destination"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/originContentTextView"
            app:layout_constraintBottom_toTopOf="@id/destinationContentTextView"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/destinationContentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:text="@string/destination_content"
            android:textSize="23sp"
            app:layout_constraintTop_toBottomOf="@id/destinationTextView"
            app:layout_constraintBottom_toTopOf="@id/topMidGuideline"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

        <TextView
            android:id="@+id/linesTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:elegantTextHeight="true"
            android:text="@string/stops"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/midGuideline"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerStops"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:translationZ="0dp"
            app:layout_constraintTop_toBottomOf="@id/midGuideline"
            app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            tools:listitem="@layout/stop_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>